# intro-to-dl

./: pyproject.toml
week1/: week01_pa.ipynb
week2/: NumpyNN (honor).ipynb
week2/v2/: digits_classification.ipynb  intro_to_tensorflow.ipynb  mnist_with_keras.ipynb
week3/: week3_task1_first_cnn_cifar10_clean.ipynb  week3_task1_first_cnn_cifar10_clean_cloud.ipynb  week3_task2_fine_tuning_clean.ipynb
